updated some picture extensions - again

--- a/index.html
+++ b/index.html
@@ -237,15 +237,15 @@
                       <p class="flex-caption">Corsica</p>
                     </li>
                     <li>
-                      <img src="img/corsica/corsica-2.JPG" />
+                      <img src="img/corsica/corsica-2.jpg" />
                       <p class="flex-caption">Corsica</p>
                     </li>
                     <li>
-                      <img src="img/corsica/corsica-4.JPG" />
+                      <img src="img/corsica/corsica-4.jpg" />
                       <p class="flex-caption">Corsica</p>
                     </li>
                     <li>
-                      <img src="img/corsica/corsica-5.JPG" />
+                      <img src="img/corsica/corsica-5.jpg" />
                       <p class="flex-caption">Corsica</p>
                     </li>
                     <li>
@@ -371,23 +371,23 @@
                     </li>
                     <!-- republica moldova -->
                     <li>
-                      <img src="img/moldova/moldova-1.JPG" />
+                      <img src="img/moldova/moldova-1.jpg" />
                       <p class="flex-caption">Republica Moldova</p>
                     </li>
                     <li>
-                      <img src="img/moldova/moldova-2.JPG" />
+                      <img src="img/moldova/moldova-2.jpg" />
                       <p class="flex-caption">Republica Moldova</p>
                     </li>
                     <li>
-                      <img src="img/moldova/moldova-4.JPG" />
+                      <img src="img/moldova/moldova-4.jpg" />
                       <p class="flex-caption">Republica Moldova</p>
                     </li>
                     <li>
-                      <img src="img/moldova/moldova-6.JPG" />
+                      <img src="img/moldova/moldova-6.jpg" />
                       <p class="flex-caption">Republica Moldova</p>
                     </li>
                     <li>
-                      <img src="img/moldova/moldova-7.JPG" />
+                      <img src="img/moldova/moldova-7.jpg" />
                       <p class="flex-caption">Republica Moldova</p>
                     </li>
                     <li>
@@ -426,13 +426,13 @@
                       <img src="img/corsica/corsica-1.JPG" />
                     </li>
                     <li>
-                      <img src="img/corsica/corsica-2.JPG" />
+                      <img src="img/corsica/corsica-2.jpg" />
                     </li>
                     <li>
-                      <img src="img/corsica/corsica-4.JPG" />
+                      <img src="img/corsica/corsica-4.jpg" />
                     </li>
                     <li>
-                      <img src="img/corsica/corsica-5.JPG" />
+                      <img src="img/corsica/corsica-5.jpg" />
                     </li>
                     <li>
                       <img src="img/corsica/corsica-6.JPG" />
@@ -481,7 +481,7 @@
                       <img src="img/croatia/croatia-5.JPG" />
                     </li>
                     <li>
-                      <img src="img/croatia/croatia-9.JPG" />
+                      <img src="img/croatia/croatia-9.jpg" />
                     </li>
                     <li>
                       <img src="img/croatia/croatia-12.JPG" />
@@ -527,19 +527,19 @@
                     </li>
                     <!-- republica moldova -->
                     <li>
-                      <img src="img/moldova/moldova-1.JPG" />
+                      <img src="img/moldova/moldova-1.jpg" />
                     </li>
                     <li>
-                      <img src="img/moldova/moldova-2.JPG" />
+                      <img src="img/moldova/moldova-2.jpg" />
                     </li>
                     <li>
-                      <img src="img/moldova/moldova-4.JPG" />
+                      <img src="img/moldova/moldova-4.jpg" />
                     </li>
                     <li>
-                      <img src="img/moldova/moldova-6.JPG" />
+                      <img src="img/moldova/moldova-6.jpg" />
                     </li>
                     <li>
-                      <img src="img/moldova/moldova-7.JPG" />
+                      <img src="img/moldova/moldova-7.jpg" />
                     </li>
                     <li>
                       <img src="img/moldova/moldova-8.JPG" />
