--- a/index-en.html
+++ b/index-en.html
@@ -230,7 +230,7 @@
       <div class="container">
         <div class="col-lg-8 mx-auto">
           <h2>Activities</h2>
-          <div>
+                    <div>
                 <div class="flexslider" id="f1">
                   <ul class="slides">
                     <li>
@@ -238,15 +238,15 @@
                       <p class="flex-caption">Corsica</p>
                     </li>
                     <li>
-                      <img src="img/corsica/corsica-2.JPG" />
+                      <img src="img/corsica/corsica-2.jpg" />
                       <p class="flex-caption">Corsica</p>
                     </li>
                     <li>
-                      <img src="img/corsica/corsica-4.JPG" />
+                      <img src="img/corsica/corsica-4.jpg" />
                       <p class="flex-caption">Corsica</p>
                     </li>
                     <li>
-                      <img src="img/corsica/corsica-5.JPG" />
+                      <img src="img/corsica/corsica-5.jpg" />
                       <p class="flex-caption">Corsica</p>
                     </li>
                     <li>
@@ -372,52 +372,52 @@
                     </li>
                     <!-- republica moldova -->
                     <li>
-                      <img src="img/moldova/moldova-1.JPG" />
-                      <p class="flex-caption">Republic of Moldova</p>
+                      <img src="img/moldova/moldova-1.jpg" />
+                      <p class="flex-caption">Republica Moldova</p>
                     </li>
                     <li>
-                      <img src="img/moldova/moldova-2.JPG" />
-                      <p class="flex-caption">Republic of Moldova</p>
+                      <img src="img/moldova/moldova-2.jpg" />
+                      <p class="flex-caption">Republica Moldova</p>
                     </li>
                     <li>
-                      <img src="img/moldova/moldova-4.JPG" />
-                      <p class="flex-caption">Republic of Moldova</p>
+                      <img src="img/moldova/moldova-4.jpg" />
+                      <p class="flex-caption">Republica Moldova</p>
                     </li>
                     <li>
-                      <img src="img/moldova/moldova-6.JPG" />
-                      <p class="flex-caption">Republic of Moldova</p>
+                      <img src="img/moldova/moldova-6.jpg" />
+                      <p class="flex-caption">Republica Moldova</p>
                     </li>
                     <li>
-                      <img src="img/moldova/moldova-7.JPG" />
-                      <p class="flex-caption">Republic of Moldova</p>
+                      <img src="img/moldova/moldova-7.jpg" />
+                      <p class="flex-caption">Republica Moldova</p>
                     </li>
                     <li>
                       <img src="img/moldova/moldova-8.JPG" />
-                      <p class="flex-caption">Republic of Moldova</p>
+                      <p class="flex-caption">Republica Moldova</p>
                     </li>
                     <li>
                       <img src="img/moldova/moldova-9.JPG" />
-                      <p class="flex-caption">Republic of Moldova</p>
+                      <p class="flex-caption">Republica Moldova</p>
                     </li>
                     <li>
                       <img src="img/moldova/moldova-10.JPG" />
-                      <p class="flex-caption">Republic of Moldova</p>
+                      <p class="flex-caption">Republica Moldova</p>
                     </li>
                     <li>
                       <img src="img/moldova/moldova-11.JPG" />
-                      <p class="flex-caption">Republic of Moldova</p>
+                      <p class="flex-caption">Republica Moldova</p>
                     </li>
                     <li>
                       <img src="img/moldova/moldova-12.JPG" />
-                      <p class="flex-caption">Republic of Moldova</p>
+                      <p class="flex-caption">Republica Moldova</p>
                     </li>
                     <li>
                       <img src="img/moldova/moldova-15.JPG" />
-                      <p class="flex-caption">Republic of Moldova</p>
+                      <p class="flex-caption">Republica Moldova</p>
                     </li>
                     <li>
                       <img src="img/moldova/moldova-16.JPG" />
-                      <p class="flex-caption">Republic of Moldova</p>
+                      <p class="flex-caption">Republica Moldova</p>
                     </li>
                   </ul>
                 </div>
@@ -427,13 +427,13 @@
                       <img src="img/corsica/corsica-1.JPG" />
                     </li>
                     <li>
-                      <img src="img/corsica/corsica-2.JPG" />
+                      <img src="img/corsica/corsica-2.jpg" />
                     </li>
                     <li>
-                      <img src="img/corsica/corsica-4.JPG" />
+                      <img src="img/corsica/corsica-4.jpg" />
                     </li>
                     <li>
-                      <img src="img/corsica/corsica-5.JPG" />
+                      <img src="img/corsica/corsica-5.jpg" />
                     </li>
                     <li>
                       <img src="img/corsica/corsica-6.JPG" />
@@ -482,7 +482,7 @@
                       <img src="img/croatia/croatia-5.JPG" />
                     </li>
                     <li>
-                      <img src="img/croatia/croatia-9.JPG" />
+                      <img src="img/croatia/croatia-9.jpg" />
                     </li>
                     <li>
                       <img src="img/croatia/croatia-12.JPG" />
@@ -528,19 +528,19 @@
                     </li>
                     <!-- republica moldova -->
                     <li>
-                      <img src="img/moldova/moldova-1.JPG" />
+                      <img src="img/moldova/moldova-1.jpg" />
                     </li>
                     <li>
-                      <img src="img/moldova/moldova-2.JPG" />
+                      <img src="img/moldova/moldova-2.jpg" />
                     </li>
                     <li>
-                      <img src="img/moldova/moldova-4.JPG" />
+                      <img src="img/moldova/moldova-4.jpg" />
                     </li>
                     <li>
-                      <img src="img/moldova/moldova-6.JPG" />
+                      <img src="img/moldova/moldova-6.jpg" />
                     </li>
                     <li>
-                      <img src="img/moldova/moldova-7.JPG" />
+                      <img src="img/moldova/moldova-7.jpg" />
                     </li>
                     <li>
                       <img src="img/moldova/moldova-8.JPG" />
