--- a/index-en.html
+++ b/index-en.html
@@ -307,11 +307,11 @@
                     </li>
                     <!-- croatia -->
                     <li>
-                      <img src="img/croatia/croatia-4.JPG" />
+                      <img src="img/croatia/croatia-4.jpg" />
                       <p class="flex-caption">Croatia</p>
                     </li>
                     <li>
-                      <img src="img/croatia/croatia-5.JPG" />
+                      <img src="img/croatia/croatia-5.jpg" />
                       <p class="flex-caption">Croatia</p>
                     </li>
                     <li>
@@ -476,10 +476,10 @@
                     </li>
                     <!-- croatia -->
                     <li>
-                      <img src="img/croatia/croatia-4.JPG" />
+                      <img src="img/croatia/croatia-4.jpg" />
                     </li>
                     <li>
-                      <img src="img/croatia/croatia-5.JPG" />
+                      <img src="img/croatia/croatia-5.jpg" />
                     </li>
                     <li>
                       <img src="img/croatia/croatia-9.jpg" />
